--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,8 @@ build/
 bin/
 !**/src/main/**/bin/
 !**/src/test/**/bin/
+!**/src/main/**/utils/
+!**/tree/config.txt/
 
 ### IntelliJ IDEA ###
 .idea
